K8s/employee-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: employees-service
spec:
  type: ClusterIP
  selector:
    app: employee-backend
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        app: employee-backend
    spec:
      containers:
        - name: employee-backend
          image: noakhali/school-app-employeeservice
          ports:
            - containerPort: 5003
