K8s/frontend-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: school-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend
  labels:
    app: school-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-frontend
  template:
    metadata:
      labels:
        app:  school-frontend
    spec:
      containers:
        - name: school-frontend
          image: noakhali/school-frontend
          ports:
            - containerPort: 80
