K8s/teacher-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teachers-service
spec:
  type: ClusterIP
  selector:
    app: teacher-backend
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teacher-backend
  template:
    metadata:
      labels:
        app: teacher-backend
    spec:
      containers:
        - name: employee-backend
          image: noakhali/school-app-teacherservice
          ports:
            - containerPort: 5002
