K8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /studentservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: students-service
                port:
                  number: 5001
          - path: /teacherservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: teachers-service
                port:
                  number: 5002
          - path: /employeeservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employees-service
                port:
                  number: 5003



          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
